[package]
name = "market-input-rpc"
version = "0.1.0"
edition = "2021"
authors = ['Chung-Ting Huang']
repository = 'https://github.com/chungthuang/energy-trading-parachain'
description = "A Pallet that implements a basic market input"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

# local packages
market-input-runtime-api = { version = "0.1.0", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "market-input-runtime-api/std"
]
