[package]
name = "market-state-runtime-api"
version = "0.1.0"
edition = "2021"
authors = ['Chung-Ting Huang']
repository = 'https://github.com/chungthuang/energy-trading-parachain'
description = "A Pallet that implements a basic market state"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
serde = { version = "1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

market-state = { path = "../", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"market-state/std",
	"sp-api/std",
]
